tests/snapshots/trace_solver@15656926055703108454.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[ref x]: &mut [T]"
---
let [ref x]: &mut [T] = s
// Applying rule `ConstructorRef`
let ref x: &mut T = &mut (*s).0
// Applying rule `BindingBorrow`
let x: &&mut T = &&mut (*s).0
// Applying rule `Binding`
let x: &&mut T = &&mut (*s).0

// Final bindings (simplified):
let x: &&mut T = &&mut (*s).0;
