tests/snapshots/trace_solver@15763370663359064372.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: true
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
  bundle_name: waffle
  request: "&[x]: &[&mut T]"
---
&[x] @ s: &[&mut T]
// Applying rule `Deref`
[x] @ *s: [&mut T]
// Applying rule `Constructor`
x @ (*s).0: &mut T
// Applying rule `Binding`
let x: &mut T = (*s).0

// Final bindings (simplified):
let x: &mut T = (*s).0; // Borrow-check error: CantCopyRefMut
