tests/snapshots/trace_solver@15768078385302124997.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    dont_eat_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: ResetBindingMode
    always_inspect_bm: false
  bundle_name: ~
  request: "[mut x]: &[T]"
---
[mut x] @ s: &[T]
// Applying rule `ConstructorRef`
mut x @ &(*s).0: &T
// Applying rule `MutBindingResetBindingMode`
mut x @ (*s).0: T
// Applying rule `Binding`
let mut x: T = (*s).0

// Final bindings (simplified):
let mut x: T = (*s).0;
